[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "used-by"
description = "Generate Used By badge from GitHub's dependencies information."
readme = "README.md"
keywords = ["used by", "dependencies"]
license = {text = "MIT License"}
authors = [
    { name = "shenxianpeng", email = "xianpeng.shen@gmail.com" },
]
dependencies = ["requests", "bs4"]
classifiers = [
    # https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities"  ,
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.scripts]
used-by = "used_by.main:main"

[project.urls]
source =  "https://github.com/shenxianpeng/used-by"
tracker = "https://github.com/shenxianpeng/used-by/issues"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[tool.setuptools]
zip-safe = false
packages = ["used_by"]

[tool.setuptools_scm]
# It would be nice to include the commit hash in the version, but that
# can't be done in a PEP 440-compatible way.
version_scheme= "no-guess-dev"
# Test PyPI does not support local versions.
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.mypy]
show_error_codes = true
show_column_numbers = true

[tool.coverage]
omit = [
    # don't include tests in coverage
    "tests/*",
]